@@ -1,7 +1,12 @@
 package com.sportconnect.semana12.order.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import com.sportconnect.semana12.order.dto.OrderRequestDTO;
 import com.sportconnect.semana12.order.dto.OrderResponseDTO;
@@ -10,8 +15,11 @@ import com.sportconnect.semana12.order.entity.OrderItem;
 import com.sportconnect.semana12.order.exception.InvalidOrderException;
 import com.sportconnect.semana12.order.mapper.OrderMapper;
 import com.sportconnect.semana12.order.repository.OrderRepository;
+import com.sportconnect.shared.datatable.dto.DataTableRequest;
+import com.sportconnect.shared.datatable.dto.DataTableResponse;
+import com.sportconnect.shared.datatable.filter.SpecificationBuilder;
+import com.sportconnect.shared.datatable.service.DataTableService;
 
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -20,9 +28,13 @@ public class OrderService {
 
     private final OrderRepository orderRepo;
     private final OrderMapper mapper;
+    private final DataTableService dataTableService;
 
+    /**
+     * Crear pedido con rollback si no tiene ítems
+     */
     @Transactional(rollbackFor = InvalidOrderException.class)
-    public void createOrder(OrderRequestDTO dto) throws InvalidOrderException {
+    public OrderResponseDTO createOrder(OrderRequestDTO dto) {
         if (dto.getItems().isEmpty()) {
             throw new InvalidOrderException("Pedido sin ítems");
         }
@@ -31,18 +43,61 @@ public class OrderService {
         order.setCustomer(dto.getCustomer());
 
         List<OrderItem> items = dto.getItems().stream()
-            .map(mapper::toEntity)
-            .peek(item -> item.setOrder(order))
-            .collect(Collectors.toList());
+                .map(mapper::toEntity)
+                .peek(item -> item.setOrder(order))
+                .toList();
 
         order.setItems(items);
-        orderRepo.save(order);
+        Order saved = orderRepo.save(order);
+
+        return mapper.toDto(saved);
     }
 
-    public List<OrderResponseDTO> getAllOrders() {
-        return orderRepo.findAll().stream()
-            .map(mapper::toDto)
-            .collect(Collectors.toList());
+    /**
+     * Actualizar pedido con rollback si ocurre error
+     */
+    @Transactional(rollbackFor = Exception.class)
+    public OrderResponseDTO updateOrder(Long id, OrderRequestDTO dto) {
+        Order order = orderRepo.findById(id)
+                .orElseThrow(() -> new RuntimeException("Pedido no encontrado"));
+
+        order.setCustomer(dto.getCustomer());
+
+        order.getItems().clear();
+        List<OrderItem> items = dto.getItems().stream()
+                .map(mapper::toEntity)
+                .peek(item -> item.setOrder(order))
+                .toList();
+
+        order.setItems(items);
+        Order updated = orderRepo.save(order);
+
+        return mapper.toDto(updated);
+    }
+
+    public OrderResponseDTO getOrderById(Long id) {
+        return orderRepo.findById(id)
+                .map(mapper::toDto)
+                .orElseThrow(() -> new RuntimeException("Pedido no encontrado"));
+    }
+
+    @Transactional(readOnly = true)
+    public DataTableResponse<OrderResponseDTO> getOrders(DataTableRequest request) {
+        Pageable pageable = dataTableService.buildPageable(request);
+
+        SpecificationBuilder<Order> builder = new SpecificationBuilder<>();
+        Specification<Order> spec = builder.build(
+                request.getFilters(),
+                request.getSearch(),
+                List.of("customer"));
+
+        Page<Order> page = orderRepo.findAll(spec, pageable);
+        Page<OrderResponseDTO> dtoPage = page.map(mapper::toDto);
+
+        return dataTableService.buildResponse(dtoPage);
+    }
+
+    public void deleteOrder(Long id) {
+        orderRepo.deleteById(id);
     }
 }
-
